--- a/index.html
+++ b/index.html
@@ -1,62 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="static/css/index.css">
+    <link rel="stylesheet" href="static\css\index.css">
+    <title>terzo_layout</title>
 </head>
 <body>
-    <div class="flex-container">
-    <div class="grd">
-    <div class="header">
-        <div class="logo">
-            <h1><img src="static/img/logotipo.png" alt=""></h1>
-        </div>
-    <div class="navigation merriweather-regular">
-        <nav>
-            <ul>
-                <li>
-                    <a href="#">Home</a>
-                </li>
-                <li>
-                    <a href="#">News</a>
-                </li>
-                <li>
-                    <a href="#">Contatti</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
-</div>
-<div class="center-content">
-    <h1>This is my wonderful page</h1>
-    <div class="subtitle">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, <br>
-        sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.         
-    </div>
-    <div class="underline">
-        <a href="#" class="white-button"></a>
-    </div>
-    <div class="button-bottom">
-        <a href="#">Continue</a>
-    </div>
-</div>
-<div class="bottom-links">
-    <ul class="links">
-        <li>
-            <a href="#"><img src="static/img/glyph-logo_May2016.png" alt=""></a>
-        </li>
-        <li>
-            <a href="#"><img src="static/img/Facebook.png" alt=""></a>
-
-        </li>
-        <li>
-            <a href="#"><img src="static/img/Group 14.png" alt=""></a>
-
-        </li>
-    </ul>
-</div>
-
-</div>
-</div>
+    <div class="hero">
+        <section class="section">
+          <header>
+            <nav class="nav">
+              <h2>
+                <a href="#"><img src="static/img/logotipo.png"></a>
+              </h2>
+              <div class="lista">
+                <ul class="merriweather-bold">
+                  <li>Home</li>
+                  <li>News</li>
+                  <li>Contatti</li>
+                </ul>
+              </div>
+            </nav>
+          </header>
+          <main class="main">
+            <div class="titolo merriweather-bold">
+              <h2>
+                This is my wonderful page
+              </h2>       
+            </div>
+            <div class="contenuto_editoriale">
+              <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit,<br> sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+              </p>
+            </div>
+            <div class="button merriweather-bold">
+              <a href="#">Continue</a>
+            </div>
+          </main>
+          <footer>
+            <div class="icone">
+                <a href="#"><img src="static/img/glyph-logo_May2016.png"></a>
+                <a href="#"><img src="static/img/Facebook.png"></a>
+                <a href="#"><img src="static/img/Group 14.png"></a>
+            </div>
+          </footer>
+        </section>
+      </div>
 </body>
 </html>
